# duff

./: .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: c-cpp.yml  release.yml
cli/: Makefile.am  args.c  args.h  duff.c  duff.ggo
lib/: Makefile.am  cli.c  cli.h  duff.c  duff.h  io.c  io.h  log.c  log.h  mem.c  mem.h  package.c  package.h  request.c  request.h  response.c  response.h  sync.c  sync.h  vector.c  vector.h
src/: Makefile.am  args.c  args.h  duff  duff.c  package.c  package.h  str.c  str.h  vector.h
test/: .gitignore  Makefile.am  check_api.c  check_args.c  check_cli.c  check_package.c  check_vector.c
